# RetargetingPlugin

./: CMakeLists.txt  README.md  build.sh  vcpkg.json
cmd/retargeting/: .gitignore  CMakeLists.txt  build.sh  musclePatches.txt  pluginEntry.cpp  requirements.sh
cmd/retargeting/data/: landmarksActionUnits.json  landmarksMeshIndex.json  landmarksPixelIndex.json  modelsPath.json  musclePatches.json
cmd/retargeting/include/: DCCInterface.h  MayaMesh.h
cmd/retargeting/interface/widgets/: PixelMuxPluginWindow.cpp  PixelMuxPluginWindow.h
cmd/retargeting/landmarks-data/: NeutralFace.json  Pose1.json  Pose2.json
cmd/retargeting/src/: DCCInterface.cpp  MayaMesh.cpp
pkg/retargeting/: CMakeLists.txt
pkg/retargeting/architecture_design/: class_diagram.uml  flow_diagram.uml
pkg/retargeting/include/: ActionUnit.h  FacialLandmark.h  FacialMesh.h  MathUtils.h  Side.h
pkg/retargeting/src/: ActionUnit.cpp  FacialLandmark.cpp  FacialMesh.cpp  MathUtils.cpp
pkg/retargeting/tests/unit-tests/: ActionUnitTest.cpp  FacialMeshTest.cpp  MathUtilsTest.cpp  TargetFaceParametrizationTest.cpp
